--- a/app/templates/frontend/app_detail.html
+++ b/app/templates/frontend/app_detail.html
@@ -150,7 +150,7 @@
                             <div class="col-md-4 mb-3 mb-md-0">
                                 <div class="text-center p-3 border rounded h-100">
                                     <div class="mb-2">
-                                        <img src="{{ url_for('static', filename='icons/sailfishos-compatibility.svg') }}" class="sfos-icon fa-2x" alt="" aria-hidden="true">
+                                        <img src="{{ url_for('static', filename='icons/sailfishos-compatibility.svg') }}" class="sfos-icon fa-2x sfos-icon-half" alt="" aria-hidden="true">
                                     </div>
                                     <h6>Native App</h6>
                                     {% set native = platform_ratings.native %}
